# caldera-gases

./: .gitignore  GVNT_gas.py  LICENSE  README.md  forecast_sat_concentration.ipynb  pyproject.toml  site_differentation.ipynb
MATLAB-functions/: isocomp_array.m  last10_iso.mlx  lin_flux_AC.mlx
azure-app/: Minimal_Start_Up_Web_App.py
docs/: commit-drafts.md  statistical-tests.md
graph_tutorial/: oauth_settings.yml
pertinent-data/calibration-data/: Copy of Picarro_Metadata_19Aug2015.txt  Picarro_Metadata_25Aug2015.txt  ZAir_Test_Aug2015.m
src/: matlabPRCN_.mat  matlabPRCN_20Jun2018_CH4_and_CO2_background_EDA_ncham-1.fig  matlabPRCN_20Jun2018_CH4_and_CO2_background_EDA_ncham-2.fig  matlabPRCN_20Jun2018_CH4_and_CO2_background_EDA_ncham-3.fig  matlabPRCN_20Jun2018_CH4_and_CO2_background_EDA_ncham-4.fig  matlabPRCN_20Jun2018_CH4_and_CO2_background_EDA_ncham-5.fig  matlabPRCN_20Jun2018_CH4_and_CO2_background_EDA_ncham-6.fig  matlabPRCN_20Jun2018_CH4_and_CO2_background_EDA_ncham-7.fig  matlabPRCN_20Jun2018_CH4_and_CO2_background_EDA_ncham-8.fig  matlabPRCN_20Jun2018_Measurements.xlsx
src/MATLAB-functions/: kp_viz.m
src/data-webapp/: README.md  caldera-data-viz.py
src/matlab/: CLPD_27Jun2018_DataAnalysis.m  CSTL_02Jul2018_DataAnalysis.asv  CSTL_02Jul2018_DataAnalysis.m  DISY_05Jul2018_DataAnalysis.m  DISY_06Jul2018_DataAnalysis.m  DISY_14Jun2019_DataAnalysis.m  EETR_24Jun2018_DataAnalysis.m  GBSN_23Jun2018_DataAnalysis.m  GFTN_29Jun2018_DataAnalysis.m  GRND_02Jul2018_DataAnalysis.m  GVNT_06Jun2019_DataAnalysis.m  GVNT_22Jun2018_DataAnalysis.asv  (+32 more)
(+30 files in other folders)
